--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,33 @@
-#map {
-  height: 92vh;
-}
-/* Optional: Makes the sample page fill the window. */
+
 html, body {
   height: 100%;
   margin: 0;
   padding: 0;
 }
+
+/* Header styles */
+#header {
+  height: 8vh;
+  background-color: #20346a;
+  display: flex;
+  align-items: center;
+}
+
+#logo {
+  height: 66%;
+  margin-left: 1vh;
+}
+
+#logo-text {
+  height: 25%;
+}
+
+/* Map container */
+#map {
+  height: 92vh;
+}
+
+/* Info window */
 #description {
   font-family: Roboto;
   font-size: 15px;
@@ -25,75 +46,31 @@ html, body {
   display: inline;
 }
 
+/* Searchbar */
 .pac-card {
-  margin: 10px 10px 0 0;
-  border-radius: 2px 0 0 2px;
+  margin: 10px  0 0 10px;
+  padding: 8px 0;
+  border: solid #20346a56;
+  border-width: 2px;
+  border-radius:5px ;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   outline: none;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
   background-color: #fff;
   font-family: Roboto;
-}
-
-#pac-container {
-  padding-bottom: 12px;
-  margin-right: 12px;
-}
-
-.pac-controls {
-  display: inline-block;
-  padding: 5px 11px;
-}
-
-.pac-controls label {
-  font-family: Roboto;
-  font-size: 13px;
-  font-weight: 300;
 }
 
 #pac-input {
+  
+  border-style: none;
   background-color: #fff;
   font-family: Roboto;
-  font-size: 15px;
+  font-size: 17px;
   font-weight: 300;
-  margin-left: 12px;
   padding: 0 11px 0 13px;
   text-overflow: ellipsis;
-  width: 400px;
-}
-
-#pac-input:focus {
-  border-color: #4d90fe;
-}
-
-#title {
-  color: #fff;
-  background-color: #4d90fe;
-  font-size: 25px;
-  font-weight: 500;
-  padding: 6px 12px;
-}
-
-#map {
-  width: 100%;
-height: ;
-background-color: grey;
-}
-
-#header {
-  height: 8vh;
-  background-color: #20346a;
-  display: flex;
-  align-items: center;
-}
-
-#logo {
-  height: 66%;
-  margin-left: 1vh;
-}
-
-#logo-text {
-  height: 25%;
-  /* margin-left: .5vh; */
+  width: 40vw;
+  outline: none;
+  min-width: 75px;
+  max-width: 400px;
 }
