--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,7 @@ html, body {
 /* Modal Content/Box */
 .modal-content {
   color: black;
-  background-color: wheat;
+  background-color: #fefefe;
   margin: 15% auto; /* 15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
