--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
+ 
 }
 
 /* Header styles */
@@ -25,7 +26,7 @@ html, body {
 
 /* Map container */
 #map {
-  height: 92vh;
+  height: 84vh;
 }
 
 /* Info window */
@@ -78,31 +79,70 @@ html, body {
 
 
 /* ******************************************************** */
+#ui-container {
+  background-color: #20346a;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+}
+#filter-ui {
+width: 90vw;
+ height: 8vh;
+ display: grid;
+
+ grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 3vw;
+ align-items: center;
+  justify-items: space-around;
+  
+}
+
+.filter-ui-label {
+  
+  height: 60%;
+  width: 100%;
+}
+
+.filter-ui-button {
+  font-family: Roboto;
+  font-weight: bold;
+  color: rgb(56, 56, 56);
+  border: rgb(126, 126, 126) solid 1px;
+  border-radius: 5px;
+  height: 100%;
+  width: 100%;
+}
+
+
 
 /* The Modal (background) */
 .modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
+  
+  bottom: 0;
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  
 }
 
 /* Modal Content/Box */
 .modal-content {
   display: flex;
   flex-direction: column;
-  color: black;
+  position: fixed;
   background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
+  margin: 55vh auto; /* 55% from the top and centered */
   padding: 20px;
-  border: 1px solid #888;
+  border: 2px solid #20346a;
+  border-radius: 5px;
   width: 80%; /* Could be more or less, depending on screen size */
+  font-family: Roboto;
+  font-weight: bold;
+  color: rgb(54, 54, 54);
 }
 
 /* The Close Button */
