--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
- 
+  background-color: #20346a;
 }
 
 /* Header styles */
@@ -101,7 +101,10 @@ width: 90vw;
 .filter-ui-label {
   
   height: 60%;
+  min-height: 35px;
   width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 .filter-ui-button {
@@ -112,6 +115,8 @@ width: 90vw;
   border-radius: 5px;
   height: 100%;
   width: 100%;
+  max-width: 250px;
+  font-size:calc(7px + .7vw);
 }
 
 
@@ -160,3 +165,80 @@ width: 90vw;
   cursor: pointer;
 }
 /* *********************************************** */
+/* Disclaimer modal */
+.disclaimer {
+  display: block;
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 20vh; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Modal Content */
+.disclaimer-content {
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0;
+  border: 1px solid #888;
+  width: 75%;
+  max-width: 500px;
+  min-width: 160px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  -webkit-animation-name: animatetop;
+  -webkit-animation-duration: 0.4s;
+  animation-name: animatetop;
+  animation-duration: 0.4s;
+  border-radius: 5px;
+}
+
+/* Add Animation */
+@-webkit-keyframes animatetop {
+  from {top:-300px; opacity:0} 
+  to {top:0; opacity:1}
+}
+
+@keyframes animatetop {
+  from {top:-300px; opacity:0}
+  to {top:0; opacity:1}
+}
+
+/* The Close Button */
+.disclaimer-close {
+  color: white;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.disclaimer-close:hover,
+.disclaimer-close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.disclaimer-header {
+  border-radius: 5px 5px 0 0;
+  padding: 2px 16px;
+  background-color: #20346a;
+  color: white;
+  text-align: center;
+}
+
+.disclaimer-body {
+  padding: 1% 10% 5% 10%;
+  font-size: .8rem;
+  font-weight: bolder;
+  line-height: 2.2rem;
+  letter-spacing: .03rem;
+  border-radius: 0 0 5px 5px;
+}
+
