--- a/Public/styles.css
+++ b/Public/styles.css
@@ -9,7 +9,7 @@ html, body {
 
 /* Header styles */
 #header {
-  height: 60px;
+  height: 80px;
   background-color: #20346a;
   display: flex;
   align-items: center;
@@ -27,7 +27,7 @@ html, body {
 
 /* Map container */
 #map {
-  height: calc(92vh - 60px);
+  height: calc(90vh - 80px);
 }
 
 /* Info window */
@@ -89,7 +89,7 @@ html, body {
 }
 #filter-ui {
 width: 90vw;
- height: 8vh;
+ height: 10vh;
  display: grid;
 
  grid-template-columns: 1fr 1fr 1fr;
@@ -117,7 +117,7 @@ width: 90vw;
   height: 100%;
   width: 100%;
   max-width: 250px;
-  font-size:calc(7px + .7vw);
+  font-size:20px;
 }
 
 
