--- a/Public/styles.css
+++ b/Public/styles.css
@@ -130,7 +130,7 @@ width: 90vw;
   bottom: 0;
   width: 100vw; /* Full width */
   height: 100%; /* Full height */
-  overflow: wrap;
+  overflow: hidden;
 }
 /* Modal Content/Box */
 .modal-content {
@@ -167,7 +167,8 @@ outline: 1px solid slategrey;
 /* The Close Button */
 .close {
   color: #aaa;
-  float: right;
+  padding-left: 5px;
+  float: left;
   font-size: 28px;
   font-weight: bold;
 }
@@ -212,23 +213,6 @@ outline: 1px solid slategrey;
   animation-duration: 0.4s;
   border-radius: 5px;
 }
-#toggleLoadingUnloadingOnly {
-  display: flex;
-  background-color: #20346a; 
-  margin-top: 20px;
-  margin-bottom: 20px;
-  border: none;
-  border-radius: 10px;
-  font-family: Roboto, Courier;
-  font-weight: 900;
-  color: white;
-  padding: 10px 25px;
-  text-align: center;
-  display: inline-block;
-  cursor: pointer;
-  text-decoration: none;
-}
-
 /* Add Animation */
 @-webkit-keyframes animatetop {
   from {top:-300px; opacity:0} 
