--- a/Public/styles.css
+++ b/Public/styles.css
@@ -113,6 +113,7 @@ width: 90vw;
   font-weight: bold;
   color: rgb(56, 56, 56);
   border: rgb(126, 126, 126) solid 1px;
+  background-color: white;
   border-radius: 5px;
   height: 100%;
   width: 100%;
