add reset button and walk circle message in destination pin infowindow

--- a/Public/styles.css
+++ b/Public/styles.css
@@ -78,6 +78,9 @@ html, body {
   max-width: 400px;
 }
 
+#btnReset {
+  margin-right: 5px;
+}
 
 /* ******************************************************** */
 #ui-container {
