--- a/Public/styles.css
+++ b/Public/styles.css
@@ -65,7 +65,7 @@ html, body {
 }
 
 #walk-label {
-font-size: .7rem;
+font-size: 1rem;
 }
 
 /* Searchbar */
@@ -99,8 +99,8 @@ font-size: .7rem;
 
 #btnReset {
   margin-right: 5px;
-  border: none;
-  color: rgb(172, 172, 172);
+  border: solid 1px #20346a;
+   color: rgb(10, 10, 10);
   border-radius: 3px;
   background-color: rgba(255, 255, 255, 0);
 }
