--- a/Public/styles.css
+++ b/Public/styles.css
@@ -56,6 +56,7 @@ html, body {
 
 #infowindow-content .title {
   font-weight: bold;
+  
 }
 
 #infowindow-content {
@@ -69,7 +70,7 @@ html, body {
 }
 
 #walk-label {
-  font-size: .8rem;
+  font-size: 2rem;
   font-weight: lighter;
 }
 
