--- a/Public/styles.css
+++ b/Public/styles.css
@@ -3,6 +3,7 @@ html, body {
   padding: 0;
   background-color: #20346a;
   font-family: Roboto, sans-serif;
+  overflow: hidden;
 }
 
 
@@ -87,11 +88,14 @@ html, body {
   background-color: #fff;
   font-family: Roboto;
   position: absolute;
-  animation: fadeIn ease 5s;
-  -webkit-animation: fadeIn ease 5s;
-  -moz-animation: fadeIn ease 5s;
-  -o-animation: fadeIn ease 5s;
-  -ms-animation: fadeIn ease 5s;
+  transition-property: all;
+	transition-duration: .6s;
+  transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+  animation: fadeIn ease 4s;
+  -webkit-animation: fadeIn ease 4s;
+  -moz-animation: fadeIn ease 4s;
+  -o-animation: fadeIn ease 4s;
+  -ms-animation: fadeIn ease 4s;
 }
 
 #pac-input {
@@ -120,6 +124,7 @@ html, body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  z-index: 100;
 }
 
 #filter-ui {
@@ -134,7 +139,7 @@ html, body {
 }
 
 .filter-ui-label {
-  height: 60%;
+  height: 55%;
   min-height: 35px;
   width: 100%;
   display: flex;
@@ -144,15 +149,38 @@ html, body {
 .filter-ui-button {
   font-family: Roboto;
   font-weight: bold;
-  color: rgb(56, 56, 56);
+  color: rgb(44, 44, 44);
   border: rgb(126, 126, 126) solid 1px;
-  background-color: white;
-  border-radius: 5px;
+  background: rgb(255,255,255);
+background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgb(173, 173, 173) 100%);
+  border-radius: 25px;
   height: 100%;
   width: 100%;
   max-width: 250px;
-  font-size: 20px;
-  -webkit-appearance: none
+  font-size: 15px;
+  -webkit-appearance: none;
+  transition-duration: .3s;
+  outline:none
+}
+
+.filter-ui-button:hover {
+  /* background: rgb(214, 214, 214);
+background: radial-gradient(circle, rgb(218, 218, 218) 0%, rgb(148, 148, 148) 100%); */
+transition-duration: .3s;
+-webkit-box-shadow: 0px 6px 15px 7px rgba(0,0,0,0.4), inset 0px -5px 14px -2px rgba(0,0,0,0.4); 
+box-shadow: 0px 6px 15px 7px rgba(0,0,0,0.4), inset 0px -5px 14px -2px rgba(0,0,0,0.4);
+}
+
+#toggleFilters {
+ display: flex;
+justify-content: space-evenly;
+align-items: center;
+}
+
+#filter-icon {
+  display: inline;
+  justify-self: center;
+  padding: 5px 0;
 }
 
 /* The Modal (background) */
@@ -178,18 +206,26 @@ html, body {
 
 .modal-content {
   position: fixed;
-  height: 40%;
+  height: 35%;
   width: calc(100vw - 4px);
-  max-width: 600px;
+  max-width: 500px;
   background-color: #fefefe;
   bottom: 12vh;
   right: 0;
   /* 55% from the top and centered */
-  border: 2px solid #20346a;
+  border: 4px solid #20346a;
+  border-bottom: none;
   font-family: Roboto;
   font-weight: bold;
   color: rgb(54, 54, 54);
   border-radius: 7px 7px 0 0;
+  overflow-x: hidden;
+  padding-bottom: 20px;
+  -webkit-animation-name: animatebottom;
+  -webkit-animation-duration: 0.2s;
+  animation-name: animatebottom;
+  animation-duration: .2s;
+  z-index: 1;
 }
 
 .menu {
@@ -197,9 +233,11 @@ html, body {
   flex-direction: column;
   align-items: center;
   position: relative;
-  overflow: scroll;
-  height: 85%;
-  padding: 20px 20px 20px 20px;
+  overflow-y: scroll;
+  
+  height: 95%;
+  padding: 20px 20px 0 20px;
+  z-index: 1;
 }
 
 .menu::-webkit-scrollbar {
@@ -208,6 +246,7 @@ html, body {
 
 .menu::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
 .menu::-webkit-scrollbar-thumb {
@@ -277,47 +316,28 @@ html, body {
   border-radius: 5px;
 }
 
-/* Add Animation */
-
-@-webkit-keyframes animatetop {
-  from {
-    top: -300px;
-    opacity: 0
-  }
-  to {
-    top: 0;
-    opacity: 1
-  }
-}
-
-@keyframes animatetop {
-  from {
-    top: -300px;
-    opacity: 0
-  }
-  to {
-    top: 0;
-    opacity: 1
-  }
-}
 
 /* The Close Button */
 
 .disclaimer-accept {
   width: 80px;
   padding: 5px 0;
-  background-color: #20346a25;
+  background-color: rgb(218, 218, 218);
   font-size: 18px;
   font-weight: bold;
   z-index: 2;
   border-radius: 3px;
   border: solid 1px gray;
+  transition: .2s;
+  color: rgb(44, 44, 44);
 }
 
 .disclaimer-accept:hover, .disclaimer-accept:focus {
-  color: #000;
+  background-color: rgb(201, 201, 201);
+  color: rgb(20, 20, 20);
   text-decoration: none;
   cursor: pointer;
+  transition: .2s;
 }
 
 .disclaimer-header {
@@ -511,20 +531,25 @@ input:checked+.slider:before {
 /* Map Legend */
 
 #map-legend {
-  display: block;
+  display: none;
   border-radius: 5px;
-  padding: 0 10px 0 5px;
+  padding: 0;
   position: absolute;
   bottom: 16vh;
   bottom: calc(var(--vh, 1vh) * 16);
   left: 1vw;
   width: 20vw;
   min-width: 150px;
-  max-width: 300px;
+  max-width: 200px;
   margin: 0;
   transition-property: all;
 	transition-duration: .6s;
-	transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+  transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
+  -webkit-animation-name: animateleft;
+  -webkit-animation-duration: 0.2s;
+  animation-name: animateleft;
+  animation-duration: .2s;
+  /* border: solid 3px #20346a; */
 }
 
 
@@ -532,17 +557,17 @@ input:checked+.slider:before {
   position: fixed;
   width: 20vw;
   min-width: 150px;
-  max-width: 300px;
+  max-width: 200px;
   color: white;
   background-color: #20346a;
   margin: 0;
-  padding: 5px 0;
+  padding: 0;
   border-radius: 5px 5px 0 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
   transition-property: all;
-	transition-duration: .6s;
+	transition-duration: .2s;
 	transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
 }
 
@@ -555,7 +580,6 @@ input:checked+.slider:before {
   justify-self: right;
   margin-right: 5%;
   padding: 0 5px;
-  font-size: 1rem;
   cursor: pointer;
 }
 
@@ -579,7 +603,7 @@ input:checked+.slider:before {
   
   display: flex;
   align-items: center;
-  font-size: 12px;
+  font-size: 14px;
 }
 
 .legend-item-polygon {
@@ -595,11 +619,13 @@ input:checked+.slider:before {
 }
 
 #garages-icon {
-  background-color: #7cb342;
+  background-color: #7cb34273;
+  border: 2px solid #7cb342;
 }
 
 #lots-icon {
-  background-color: #01579b;
+  background-color: #01589b6b;
+  border: 2px solid #01579b;
 }
 
 #smart-meters-icon {
@@ -635,6 +661,15 @@ input:checked+.slider:before {
 }
 
 /* Fade Animations */
+
+/* .hidden {
+  display: none;
+}
+
+.visuallyhidden {
+  opacity: 0;
+} */
+
 img[src="images/text-background.png"] {
   animation: fadeIn ease .5s;
   -webkit-animation: fadeIn ease .5s;
@@ -695,3 +730,94 @@ img[src="images/text-background.png"] {
     opacity:1;
 }
 }
+
+/* Add Animation */
+
+@-webkit-keyframes animatetop {
+  from {
+    top: -300px;
+    opacity: 0
+  }
+  to {
+    top: 0;
+    opacity: 1
+  }
+}
+
+@keyframes animatetop {
+  from {
+    top: -300px;
+    opacity: 0
+  }
+  to {
+    top: 0;
+    opacity: 1
+  }
+}
+
+@-webkit-keyframes animatebottom {
+  from {
+    bottom: -300px;
+    opacity: 0
+  }
+  to {
+    bottom: 12vh;
+    opacity: 1
+  }
+}
+
+@keyframes animatebottom {
+  from {
+    bottom: -300px;
+    opacity: 0
+  }
+  to {
+    bottom: 12vh;
+    opacity: 1
+  }
+}
+
+@-webkit-keyframes animateleft {
+  from {
+    left: -300px;
+    opacity: 0
+  }
+  to {
+    left: 1vw;
+    opacity: 1
+  }
+}
+
+@keyframes animateleft {
+  from {
+    left: -300px;
+    opacity: 0
+  }
+  to {
+    left: 1vw;
+    opacity: 1
+  }
+}
+
+@-webkit-keyframes animateoffleft {
+  from {
+    left: 1vw;
+    opacity: 1;
+  }
+  to {
+    left: -300px;
+    opacity: 0
+  }
+}
+
+@keyframes animateoffleft {
+  from {
+    left: 1vw;
+    opacity: 1
+  }
+  to {
+    left: -300px;
+    opacity: 0
+  }
+}
+
