--- a/Public/styles.css
+++ b/Public/styles.css
@@ -2,11 +2,25 @@ html, body {
   margin: 0;
   padding: 0;
   background-color: #20346a;
-  font-family: Roboto, sans-serif;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
   overflow: hidden;
 }
 
+button {
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+}
 
+/* Import Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Manrope&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
+
+@font-face {
+  font-family: 'Gotham Book';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Gotham Book'), url('font/GOTHAMBOOK.woff') format('woff');
+  }
 /* Header styles */
 
 #header {
@@ -50,7 +64,6 @@ html, body {
 /* Info window */
 
 #description {
-  font-family: Roboto;
   font-size: 15px;
   font-weight: 300;
 }
@@ -81,12 +94,11 @@ html, body {
   padding: 8px 0;
   border: solid #20346ab9;
   border-width: 2px;
-  border-radius: 5px;
+  border-radius: 20px;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   outline: none;
   background-color: #fff;
-  font-family: Roboto;
   position: absolute;
   transition-property: all;
 	transition-duration: .6s;
@@ -101,12 +113,12 @@ html, body {
 #pac-input {
   border-style: none;
   background-color: #fff;
-  font-family: Roboto;
-  font-size: 17px;
+  font-size: 19px;
   font-weight: 300;
   padding: 0 11px 0 13px;
+  margin-left: 5px;
   text-overflow: ellipsis;
-  width: 55vw;
+  width: 85%;
   outline: none;
   min-width: 75px;
   max-width: 400px;
@@ -139,7 +151,7 @@ html, body {
 }
 
 .filter-ui-label {
-  height: 55%;
+  height: 50%;
   min-height: 35px;
   width: 100%;
   display: flex;
@@ -147,7 +159,6 @@ html, body {
 }
 
 .filter-ui-button {
-  font-family: Roboto;
   font-weight: bold;
   color: rgb(44, 44, 44);
   border: rgb(126, 126, 126) solid 1px;
@@ -215,7 +226,6 @@ align-items: center;
   /* 55% from the top and centered */
   border: 4px solid #20346a;
   border-bottom: none;
-  font-family: Roboto;
   font-weight: bold;
   color: rgb(54, 54, 54);
   border-radius: 7px 7px 0 0;
@@ -294,7 +304,6 @@ align-items: center;
   /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4);
   /* Black w/ opacity */
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 /* Modal Content */
@@ -326,7 +335,7 @@ align-items: center;
   font-size: 18px;
   font-weight: bold;
   z-index: 2;
-  border-radius: 3px;
+  border-radius: 8px;
   border: solid 1px gray;
   transition: .2s;
   color: rgb(44, 44, 44);
@@ -603,7 +612,7 @@ input:checked+.slider:before {
   
   display: flex;
   align-items: center;
-  font-size: 14px;
+  font-size: 12px;
 }
 
 .legend-item-polygon {
