--- a/Public/styles.css
+++ b/Public/styles.css
@@ -121,20 +121,23 @@ button {
   -moz-animation: fadeIn ease 4s;
   -o-animation: fadeIn ease 4s;
   -ms-animation: fadeIn ease 4s;
+  width: 60vw;
+  min-width: 75px;
+  max-width: 500px;
 }
 
 #pac-input {
   border-style: none;
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0);
   font-size: 19px;
   font-weight: 300;
   padding: 0 11px 0 13px;
   margin-left: 5px;
+  margin-right: 30px;
   text-overflow: ellipsis;
-  width: 85%;
+  width: 90%;
   outline: none;
-  min-width: 75px;
-  max-width: 400px;
+  
   animation: fadeIn ease 2s;
   -webkit-animation: fadeIn ease 2s;
   -moz-animation: fadeIn ease 2s;
