--- a/Public/styles.css
+++ b/Public/styles.css
@@ -11,16 +11,9 @@ button {
 }
 
 /* Import Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Manrope&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
 
-@font-face {
-  font-family: 'Gotham Book';
-  font-style: normal;
-  font-weight: normal;
-  src: local('Gotham Book'), url('font/GOTHAMBOOK.woff') format('woff');
-  }
+
 /* Header styles */
 
 #header {
@@ -82,14 +75,6 @@ button {
   align-items: center;
 }
 
-/* #walk-span {
-  dis
-} */
-
-#place-name {
-
-}
-
 #walk-label {
   font-size: 1.2rem;
   font-weight: lighter;
@@ -102,7 +87,7 @@ button {
 
 /* Searchbar */
 
-.pac-card {
+.searchbar-container {
   margin: 10px 0 0 10px;
   padding: 8px 0;
   border: solid #20346ab9;
@@ -126,7 +111,7 @@ button {
   max-width: 500px;
 }
 
-#pac-input {
+#searchbar-input {
   border-style: none;
   background-color: rgba(255, 255, 255, 0);
   font-size: 19px;
@@ -147,26 +132,26 @@ button {
 
 /* ******************************************************** */
 
-#ui-container {
+#footer {
   background-color: #20346a;
   display: flex;
   flex-direction: column;
   align-items: center;
-  z-index: 100;
 }
 
-#filter-ui {
+#footer-buttons-container {
   width: 90vw;
   height: 12vh;
   height: calc(var(--vh, 1vh) * 12);
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 3vw;
+  grid-template-rows: 100%;
   align-items: center;
   justify-items: space-around;
 }
 
-.filter-ui-label {
+.footer-button-label {
   height: 50%;
   min-height: 35px;
   width: 100%;
@@ -174,7 +159,7 @@ button {
   justify-content: center;
 }
 
-.filter-ui-button {
+.footer-button {
   font-weight: bold;
   color: rgb(44, 44, 44);
   border: rgb(126, 126, 126) solid 1px;
@@ -191,13 +176,13 @@ button {
  
 }
 
-.filter-ui-button:hover {
+.footer-button:hover {
   /* background: rgb(214, 214, 214);
 background: radial-gradient(circle, rgb(218, 218, 218) 0%, rgb(148, 148, 148) 100%); */
 transition-duration: .3s;
 -webkit-box-shadow: 0px 6px 15px 7px rgba(0,0,0,0.4), inset 0px -5px 14px -2px rgba(0,0,0,0.4); 
 box-shadow: 0px 6px 15px 7px rgba(0,0,0,0.4), inset 0px -5px 14px -2px rgba(0,0,0,0.4);
-cursor: pointer;
+/* cursor: pointer; */
 }
 
 #toggleFilters {
@@ -268,6 +253,10 @@ align-items: center;
   z-index: 1;
 }
 
+.toggle-label {
+  margin-left: 75px;
+}
+
 .menu::-webkit-scrollbar {
   width: 2em;
 }
@@ -326,25 +315,47 @@ align-items: center;
 
 /* Modal Content */
 
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, .5);
+  box-shadow: 0 0 1px rgba(255, 255, 255, .5);
+}
+
 .disclaimer-content {
   position: relative;
-  background-color: #20346a;
+  background-color: white;
   margin: auto;
   padding: 0;
   border: 1px solid #888;
   width: 75%;
   max-width: 500px;
   min-width: 160px;
+  max-height: 70%;
+  overflow-y: auto;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   -webkit-animation-name: animatetop;
   -webkit-animation-duration: 0.4s;
   animation-name: animatetop;
   animation-duration: 0.4s;
   border-radius: 5px;
+  
 }
 
+.disclaimer-content::-webkit-scrollbar {
+  width: auto;
+}
 
-/* The Close Button */
+.disclaimer-content::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+.disclaimer-content::-webkit-scrollbar-thumb {
+  width: 1em;
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
+}
+
 #disclaimer-accept {
   display: flex;
   justify-content: center;
@@ -458,86 +469,7 @@ h2 {
 
 .label {
   text-align: center;
-}
-
-/* key sliders to legend*/
-
-/* input:checked+#slideHc { background-color:  }
-   
-input:checked+#slideMg { background-color:  }
-    
- input:checked+#slidePg { background-color:  }
-    
-input:checked+#slideSm { background-color:  }
-   
- input:checked+#slideBl { background-color:  }
-   
-input:checked+#slideBr { background-color:  }
-  
- input:checked+#slideYl { background-color:  }
-    
-input:checked+#slideEv { background-color:  }
-   
- input:checked+#slideMc { background-color:  }
-   
- input:checked+#slideBu { background-color:  }
-
-input:checked+#slideRe { background-color:  }
-   
- input:checked+#slideLu { background-color:  }
-
-
-
- input:focus+#slideHc { background-color:  }
-    
-input:focus+#slideMg { background-color:  }
-    
- input:focus+#slidePg { background-color:  }
-    
-input:focus+#slideSm { background-color:  }
-   
- input:focus+#slideBl { background-color:  }
-   
-input:focus+#slideBr { background-color:  }
-  
- input:focus+#slideYl { background-color:  }
-    
-input:focus+#slideEv { background-color:  }
-   
- input:focus+#slideMc { background-color:  }
-   
- input:focus+#slideBu { background-color:  }
-
-input:focus+#slideRe { background-color:  }
-   
- input:focus+#slideLu { background-color:  }
-
- 
-   
- #toggleHandicap { color:  }
-   
- #toggleMunicipalGarages { color:  }
-    
-  #togglePrivateGarages { color:  }
-    
- #toggleSmartMeters { color:  }
-   
- #toggleBlueTopMeters { color:  }
-   
- #toggleBrownTopMeters { color:  }
-  
- #toggleYellowTopMeters { color:  }
-    
- #toggleEVCharge { color:  }
-   
- #toggleMotorcycle { color:  }
-   
-#toggleBusLargeVehicle { color:  }
-
- #toggleResidential { color:  }
-   
- #toggleLoadingUnloading { color:  } */
-   
+}  
 
 input:checked+.slider {
   background-color: #2196F3;
@@ -576,6 +508,8 @@ input:checked+.slider:before {
   width: 20vw;
   min-width: 150px;
   max-width: 200px;
+  max-height: 50vh;
+  overflow-y: auto;
   margin: 0;
   transition-property: all;
 	transition-duration: .6s;
@@ -585,6 +519,21 @@ input:checked+.slider:before {
   animation-name: animateleft;
   animation-duration: .2s;
   /* border: solid 3px #20346a; */
+}
+
+#map-legend::-webkit-scrollbar {
+  width: .5em;
+}
+
+#map-legend::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+#map-legend::-webkit-scrollbar-thumb {
+  width: 1em;
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
 }
 
 
@@ -694,6 +643,8 @@ input:checked+.slider:before {
 #bus-icon {
   background-color: #afb42b;
 }
+
+
 
 /* Fade Animations */
 
