fixed handicapped filter typo

--- a/Public/styles.css
+++ b/Public/styles.css
@@ -177,12 +177,10 @@ button {
 }
 
 .footer-button:hover {
-  /* background: rgb(214, 214, 214);
-background: radial-gradient(circle, rgb(218, 218, 218) 0%, rgb(148, 148, 148) 100%); */
 transition-duration: .3s;
 -webkit-box-shadow: 0px 6px 15px 7px rgba(0,0,0,0.4), inset 0px -5px 14px -2px rgba(0,0,0,0.4); 
 box-shadow: 0px 6px 15px 7px rgba(0,0,0,0.4), inset 0px -5px 14px -2px rgba(0,0,0,0.4);
-/* cursor: pointer; */
+cursor: pointer;
 }
 
 #toggleFilters {
